more debugging the cpu/gpu discrepancy

--- a/scripts/bw_challenge_recover.ipynb
+++ b/scripts/bw_challenge_recover.ipynb
@@ -18,25 +18,17 @@
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
     "from proSVD import proSVD\n",
-    "rng = np.random.default_rng()\n",
-    "# al.input_sources.datasets.construct_unpublished24()"
+    "\n",
+    "import h5py\n",
+    "import pandas as pd\n",
+    "\n",
+    "rng = np.random.default_rng(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,30 +48,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel = np.exp(np.linspace(0,-1,5))\n",
+    "kernel /= kernel.sum()\n",
+    "mode = 'valid'\n",
+    "pre_prosvd_A = np.column_stack([np.convolve(kernel, column, mode) for column in pre_smooth_A.T])\n",
+    "pre_prosvd_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
+    "pre_prosvd_beh = pre_smooth_beh\n",
+    "\n",
+    "permutation = np.eye(96)\n",
+    "permutation = np.eye(96)[rng.permutation(96),:]\n",
+    "# n = pre_prosvd_A.shape[0]\n",
+    "# slice = np.arange(n) < n//2\n",
+    "# pre_prosvd_A = np.vstack([pre_prosvd_A[slice], pre_prosvd_A[~slice] @ permutation])\n",
+    "\n",
+    "\n",
+    "pre_prosvd_A = fin.center_from_first_n(pre_prosvd_A, 100)\n",
+    "pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = fin.clip(pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t)\n",
+    "\n",
+    "\n",
+    "pre_jpca_A, Qs = fin.prosvd_data_with_Qs(pre_prosvd_A, 4, 50)\n",
+    "pre_jpca_A, pre_jpca_t, pre_jpca_beh = fin.clip(pre_jpca_A, pre_prosvd_t, pre_prosvd_beh)\n",
+    "\n",
+    "permutation = np.eye(4)[[2,3,0,1],:]\n",
+    "n = pre_jpca_A.shape[0]\n",
+    "# slice = np.arange(n) < n//2\n",
+    "# pre_jpca_A = np.vstack([pre_jpca_A[~slice] @ permutation, pre_jpca_A[slice]])\n",
+    "\n",
+    "first_third_slice = np.arange(n) < n//3\n",
+    "last_third_slice = np.arange(n) > 2*n//3\n",
+    "pre_jpca_A = np.vstack([pre_jpca_A[first_third_slice], pre_jpca_A[last_third_slice]  @ permutation])\n",
+    "pre_jpca_t = pre_jpca_t[first_third_slice | last_third_slice]\n",
+    "pre_jpca_beh = pre_jpca_beh[first_third_slice | last_third_slice]\n",
+    "\n",
+    "\n",
+    "pre_splice_A, pre_splice_beh, pre_splice_t = pre_jpca_A, pre_jpca_beh, pre_jpca_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pre_A, pre_beh, pre_t, _ = al.input_sources.datasets.construct_nason20_dataset()\n",
-    "\n",
-    "fig,ax = plt.subplots(nrows=2, layout=\"tight\")\n",
-    "ax[0].plot(pre_smooth_t, pre_smooth_A[:,0])\n",
-    "signal = pre_smooth_A[:,0]\n",
-    "\n",
-    "kernel = np.exp(np.linspace(0,-1,5))\n",
-    "kernel /= kernel.sum()\n",
-    "ax[1].plot(kernel)\n",
-    "\n",
-    "mode = 'valid'\n",
-    "smoothed = np.convolve(kernel, signal, mode)\n",
-    "smoothed_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
-    "ax[0].plot(smoothed_t,smoothed)\n",
-    "\n",
-    "\n",
-    "ax[0].set_xlim([80, 100])\n",
-    "ax[0].set_ylim([10, 30])\n",
-    "ax[0].set_title(\"Original and smoothed data\")\n",
-    "ax[1].set_title(\"Convolution kernel\")"
+    "(pre_prosvd_t[-1] - pre_prosvd_t[0])"
    ]
   },
   {
@@ -89,26 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode = 'valid'\n",
-    "pre_prosvd_A = np.column_stack([np.convolve(kernel, column, mode) for column in pre_smooth_A.T])\n",
-    "pre_prosvd_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
-    "pre_prosvd_beh = pre_smooth_beh\n",
-    "\n",
-    "# n = pre_prosvd_A.shape[0]\n",
-    "# slice = np.arange(n) < n//2\n",
-    "# pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = (np.vstack([pre_prosvd_A[slice], pre_prosvd_A[slice] @ permutation][::-1]),\n",
-    "#              pre_prosvd_beh, \n",
-    "#              pre_prosvd_t\n",
-    "#             )\n",
-    "\n",
-    "\n",
-    "pre_prosvd_A = fin.center_from_first_n(pre_prosvd_A, 100)\n",
-    "pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = fin.clip(pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t)\n",
-    "\n",
-    "\n",
-    "\n",
-    "pre_jpca_A, Qs = fin.prosvd_data_with_Qs(pre_prosvd_A, 4, 50)\n",
-    "pre_jpca_A, pre_jpca_t, pre_jpca_beh = fin.clip(pre_jpca_A, pre_prosvd_t, pre_prosvd_beh)"
+    "permutation.astype(int)"
    ]
   },
   {
@@ -118,109 +115,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_splice_A, pre_splice_beh, pre_splice_t = pre_jpca_A, pre_jpca_beh, pre_jpca_t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
     "A, beh, t = pre_jpca_A, pre_jpca_beh, pre_jpca_t"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
-   "source": [
-    "##### to skip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA()\n",
-    "pca.fit(pre_prosvd_A)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "var_explained = np.cumsum([0] + list(pca.explained_variance_ratio_))\n",
-    "ax.plot(var_explained, '.-')\n",
-    "ax.set_ylim([0,1])\n",
-    "cutoff = np.nonzero(var_explained > .9)[0][0]\n",
-    "ax.axvline(cutoff, color='k', alpha=.5)\n",
-    "ax.axhline(.9, color='k', alpha=.25)\n",
-    "ax.text(.65,.1, f'n_components $\\\\approx$ {cutoff}', transform=ax.transAxes)\n",
-    "ax.set_ylabel(\"cumulative variance explained\")\n",
-    "ax.set_xlabel(\"number of components\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, ax = plt.subplots(nrows=2, layout=\"tight\")\n",
-    "# dQ = np.linalg.norm(np.diff(Qs, axis=0), axis=1)\n",
-    "# dt = np.diff(pre_prosvd_t)\n",
-    "# ax[0].plot(t[:-1], dQ/dt[:,None]);\n",
-    "# ax[0].set_ylabel(\"$\\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
-    "# ax[0].set_title(\"Change in proSVD vectors over time\");\n",
-    "# ax[0].set_xlabel(\"time (s)\");\n",
-    "\n",
-    "# ax[1].plot(t[:-1], np.log(dQ/dt[:,None]));\n",
-    "# ax[1].set_ylabel(\"$\\\\ln \\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
-    "# ax[1].set_title(\"(log scale)\");\n",
-    "# ax[1].set_xlabel(\"time (s)\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %matplotlib inline\n",
-    "# fig, axs = plt.subplots(nrows=3, ncols=3, sharey='row')\n",
-    "\n",
-    "# slice_half_width = 20\n",
-    "# time_slices = [slice(0,slice_half_width*2), \n",
-    "#                slice(len(t)//2-slice_half_width, len(t)//2+slice_half_width) , \n",
-    "#                slice(-slice_half_width*2, -1)]\n",
-    "# for i in range(3):\n",
-    "#     s = time_slices[i]\n",
-    "#     axs[0,i].plot(t[s],beh[s])\n",
-    "#     axs[0,i].set_xlim([min(t[s]), max(t[s])])\n",
-    "#     axs[1,i].imshow(A[s,:].T, aspect='auto', interpolation='none')\n",
-    "#     axs[1,i].set_xticks([])\n",
-    "#     axs[2,i].plot(t[s],A[s,:], color='k', alpha=.25)\n",
-    "#     axs[2,i].set_xlim([min(t[s]), max(t[s])])\n",
-    "\n",
-    "# axs[0,0].set_title(f\"first {slice_half_width*2} points\")\n",
-    "# axs[0,1].set_title(f\"middle {slice_half_width*2} points\")\n",
-    "# axs[0,2].set_title(f\"last {slice_half_width*2} points\")\n",
-    "\n",
-    "# axs[0,0].set_ylabel(\"Behavior\")\n",
-    "# axs[1,0].set_ylabel(\"Neural Latents\")\n",
-    "# axs[2,0].set_ylabel(\"Neural Latents\")\n",
-    "# axs[2,1].set_xlabel(\"time (s)\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11",
+   "id": "6",
    "metadata": {},
    "source": [
     "##### bw"
@@ -229,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,129 +161,21 @@
     "    def frame_draw_condition(self, step_number, bw):\n",
     "        condition = True\n",
     "        condition = condition and (step_number % 1 == 0)\n",
-    "        condition = condition and (350 < step_number < 1600)\n",
+    "        condition = condition and (1500 < step_number < 1600)\n",
     "        return condition\n",
     "        \n",
-    "am = CustomAnimation() if False else None\n",
+    "# am = CustomAnimation()\n",
+    "am = None\n",
     "\n",
-    "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True, save_A=True)\n",
+    "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True)\n",
     "\n",
-    "br.run(limit=557,save=True)"
+    "br.run(save=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.argmax(br.alpha_history[0][-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "historical_observations, _ = br.obs_ds.get_history()\n",
-    "n_steps = 30\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(historical_observations[:,0], historical_observations[:,1], '.')\n",
-    "ax.plot(historical_observations[-n_steps:,0], historical_observations[-n_steps:,1])\n",
-    "\n",
-    "ms = []\n",
-    "for i in range(n_steps):\n",
-    "    m = np.argmax(br.alpha_history[0][-1-i])\n",
-    "    ms.append(m)\n",
-    "\n",
-    "for m in set(ms):    \n",
-    "    al.plotting_functions.add_2d_bubble(ax, br.bw.L[m], br.bw.mu[m], 3, alpha=.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "from scipy.interpolate import BSpline, make_interp_spline\n",
-    "historical_observations, _ = br.obs_ds.get_history()\n",
-    "n_steps = 25\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "all_observations = br.obs_ds.a\n",
-    "idx = br.obs_ds.index\n",
-    "width1= idx\n",
-    "width2 = 4*idx\n",
-    "ax.plot(all_observations[idx-width1:idx+width2,0], all_observations[idx-width1:idx+width2,1], '.',color=\"#505050\", ms=15, alpha=.1, mew=0)\n",
-    "\n",
-    "points = np.array([historical_observations[-n_steps:,0], historical_observations[-n_steps:,1]]).T\n",
-    "t = np.linspace(0,1,n_steps)\n",
-    "\n",
-    "b = make_interp_spline(t,points)\n",
-    "\n",
-    "points = b(np.linspace(0,1,100))\n",
-    "ax.plot(points[:,0],points[:,1])\n",
-    "\n",
-    "ms = []\n",
-    "for i in range(n_steps):\n",
-    "    m = np.argmax(br.alpha_history[0][-1-i])\n",
-    "    ms.append(m)\n",
-    "\n",
-    "for m in set(ms):    \n",
-    "    al.plotting_functions.add_2d_bubble(ax, br.bw.L[m], br.bw.mu[m], 3, alpha=.5)\n",
-    "\n",
-    "ax.set_xlim([-15,35])\n",
-    "ax.set_ylim([-10,35])\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "from scipy.interpolate import BSpline, make_interp_spline\n",
-    "historical_observations, _ = br.obs_ds.get_history()\n",
-    "n_steps = 25\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "all_observations = br.obs_ds.a\n",
-    "idx = br.obs_ds.index\n",
-    "width1= idx\n",
-    "width2 = 4*idx\n",
-    "ax.plot(all_observations[idx-width1:idx+width2,0], all_observations[idx-width1:idx+width2,1], '.',color=\"#505050\", ms=15, alpha=.1, mew=0)\n",
-    "\n",
-    "points = np.array([historical_observations[-n_steps:,0], historical_observations[-n_steps:,1]]).T\n",
-    "t = np.linspace(0,1,n_steps)\n",
-    "\n",
-    "b = make_interp_spline(t,points)\n",
-    "\n",
-    "points = b(np.linspace(0,1,n_steps*5))\n",
-    "ax.plot(points[:,0],points[:,1])\n",
-    "\n",
-    "for i in range(n_steps):\n",
-    "    m = np.argmax(br.alpha_history[0][-1-i])\n",
-    "    # todo: check that these indexes line up\n",
-    "    al.plotting_functions.add_2d_bubble(ax, br.L_history[-1-i][m], br.mu_history[-1-i][m], 3, alpha=.5)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,33 +186,41 @@
     "brs = []\n",
     "for file in files[-8:]:\n",
     "    with open(file, 'br') as fhan:\n",
-    "        brs.append(pickle.load(fhan))\n",
-    "br = brs[-6]"
+    "        brs.append(pickle.load(fhan))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "br = brs[-5]\n",
     "%matplotlib qt\n",
     "import importlib\n",
     "import copy\n",
     "importlib.reload(al.plotting_functions)\n",
     "\n",
     "br2 = copy.deepcopy(br)\n",
-    "br2.obs_ds.t = np.arange(br.obs_ds.t.size) * 0.05 +  br.obs_ds.t[0]\n",
-    "br = br2\n",
-    "al.plotting_functions.compare_metrics([br], offset=1, red_lines=[pre_jpca_t[n//3-1] ,])"
+    "# br2.obs_ds.t = np.arange(br.obs_ds.t.size) * 0.05 +  br.obs_ds.t[0]\n",
+    "al.plotting_functions.compare_metrics([br], offset=1, red_lines=[br.obs_ds.t[n//2] / 60], minutes=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([0,1], [0,1], linewidth=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "13",
    "metadata": {},
    "source": [
     "### Some sort of continuity measure?"
@@ -524,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +333,6 @@
     "    import io\n",
     "    from pptx import Presentation\n",
     "    from pptx.util import Inches, Pt\n",
-    "    import matplotlib.pyplot as plt\n",
     "    \n",
     "    layouts_to_indexes = {\n",
     "        \"title\":0,\n",
@@ -551,17 +350,13 @@
     "    tf.text = \"This is text inside a textbox\"\n",
     "    \n",
     "    tf.paragraphs[0].font.size = Pt(10)\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(20,20))\n",
-    "    ax.plot(range(2), range(2))\n",
     "    \n",
     "    buf = io.BytesIO()\n",
-    "    fig.savefig(buf, format='png', dpi=200)\n",
+    "    fig.savefig(buf, format='svg')\n",
     "    buf.seek(0)\n",
     "    slide.shapes.add_picture(buf, 1*In, 1*In, 2*In)\n",
     "    \n",
-    "    prs.save(Path(\"/home/jgould/Dropbox (University of Michigan)/bwruns\") / \"testy.pptx\")\n",
-    "test_making_powerpoints()"
+    "    prs.save(Path(\"/home/jgould/Dropbox (University of Michigan)/bwruns\") / \"test.pptx\")"
    ]
   }
  ],
