--- a/scripts/debug jax/replicate_rios_thing.ipynb
+++ b/scripts/debug jax/replicate_rios_thing.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\"\n",
+    "os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\"\n",
     "\n",
     "import scipy\n",
     "import numpy as np\n",
@@ -57,7 +57,7 @@
    "source": [
     "def loadFile(fileType, m = 0, n = 0):      \n",
     "\n",
-    "    fileName = '/home/jgould/Downloads/temp/Monkey' + fileType + '.mat'\n",
+    "    fileName = '/home/jgould/Documents/Bubblewrap/generated/datasets/from_rio/Data/MonkeyReach/Monkey' + fileType + '.mat'\n",
     "    data = scipy.io.loadmat(fileName)\n",
     "\n",
     "    Output = np.transpose(data.get('y')) #Kinematic Data\n",
@@ -185,7 +185,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, Y = loadFile('N_MC')"
+    "X1, Y1 = loadFile('N_MC')\n",
+    "X2, Y2 = loadFile('W_MC')\n",
+    "\n",
+    "X = np.hstack([X1, X2])\n",
+    "Y = np.hstack([Y1, Y2])\n",
+    "\n",
+    "brs = []\n",
+    "decomp = reducePSVD(Y.T, 10)\n",
+    "\n",
+    "X = X[:,-decomp.shape[1]:]\n",
+    "br = main(decomp, X, nBubbles=200)\n",
+    "brs.append(br) \n",
+    "bpf.compare_metrics([br], 1)"
    ]
   },
   {
@@ -195,79 +207,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decomp = reducePSVD(Y.T, 2)"
+    "br.behavior_error_history"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "decomp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, Y = loadFile('N_MC')\n",
-    "brs = []\n",
-    "for i in range(2, 3):\n",
-    "    decomp = reducePSVD(Y.T, i)\n",
-    "\n",
-    "    X = X[:,-decomp.shape[1]:]\n",
-    "    br = main(decomp, X, nBubbles=100)\n",
-    "    brs.append(br) \n",
-    "    bpf.compare_metrics([br], 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, Y = loadFile('N_MC')\n",
-    "brs = []\n",
-    "for i in range(2, 3):\n",
-    "    decomp = reducePSVD(Y.T, i)\n",
-    "\n",
-    "    X = X[:,-decomp.shape[1]:]\n",
-    "    br = main(decomp, X, nBubbles=100)\n",
-    "    brs.append(br) \n",
-    "    bpf.compare_metrics([br], 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "br.behavior_error_history"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "br.behavior_error_history"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
