--- a/scripts/debug jax/run_example.ipynb
+++ b/scripts/debug jax/run_example.ipynb
@@ -22,16 +22,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run the same script, using cpu and gpu\n",
-    "subprocess.call([\"python\", \"run_partial.py\", \"gpu\"])\n",
-    "subprocess.call([\"python\", \"run_partial.py\", \"cpu\"])\n",
-    "backends = [\"gpu\", \"cpu\"]"
+    "np.random.default_rng(0).normal(size=(5,5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the same script, using cpu and gpu\n",
+    "subprocess.call([\"python\", \"run_example.py\", \"gpu\"])\n",
+    "subprocess.call([\"python\", \"run_example.py\", \"cpu\"])\n",
+    "backends = [\"gpu\", \"cpu\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "## alpha"
@@ -66,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "## B and pre_B"
@@ -96,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "Note that you can manually suppress B elements beyond 10 but it doesn't help."
@@ -146,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## logB"
@@ -222,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "## mu"
@@ -276,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "source": [
     "(460, 9.8)\n",
@@ -454,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,15 +478,15 @@
     "    mu = brs[k].mu_history[i,m,:]\n",
     "    al.plotting_functions.add_2d_bubble(ax, L, mu, 3, alpha=.5, facecolor=[\"red\", 'blue'][k])\n",
     "\n",
-    "ax.set_xlim(mu[0] + np.array([-1,1])*.25)\n",
-    "ax.set_ylim(mu[1] + np.array([-1,1])*.25)\n",
+    "ax.set_xlim(mu[0] + np.array([-1,1])*.05)\n",
+    "ax.set_ylim(mu[1] + np.array([-1,1])*.05)\n",
     "ax.axis('scaled');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,16 +561,6 @@
     "    for m in range(brs[k].bw.N):\n",
     "        assert np.all(brs[0].L_m_history[0,m,[0,0,1],[0,1,1]] == 0)\n",
     "        assert np.all((np.std(brs[0].L_m_history[:,m,...], axis=0) > 0) == np.array([[False, False], [True, False]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brs[0].L_grad_history"
    ]
   }
  ],
