gets tests to pass and adds coverage reports

--- a/scripts/debug jax/run_example.ipynb
+++ b/scripts/debug jax/run_example.ipynb
@@ -517,9 +517,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = 1\n",
-    "m=0\n",
-    "plt.plot(np.log(np.abs(np.diff(brs[k].L_history[:, m, ...], axis=0))).reshape([-1,4]))"
+    "k = 0\n",
+    "m=1\n",
+    "plt.plot(np.log(np.abs(np.diff(brs[k].L_history[:, m, ...], axis=0))).reshape([-1,4]));"
    ]
   },
   {
@@ -529,8 +529,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = 0\n",
-    "m=5\n",
+    "k = 1\n",
+    "m=3\n",
     "plt.plot(np.log(np.abs(np.diff(brs[k].L_diag_history[:, m, ...], axis=0))).reshape([brs[k].L_diag_history.shape[0]-1,-1]))"
    ]
   },
