--- a/scripts/svd.ipynb
+++ b/scripts/svd.ipynb
@@ -117,6 +117,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "c2c7de17-dfa4-4ccd-a459-e7313d4c9863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A_sequence = [rng.normal(size=(2,1)) + np.array([3,3]) for _ in range(10)]\n",
+    "Q, B, W = general_incremental_svd(A_sequence, max_k=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0451b1dd-8828-46ea-b845-483ddf62dfca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.48237723, 3.48237723, 3.87583244, 3.87583244, 2.51621487,\n",
+       "        2.51621487, 3.4321911 , 3.4321911 , 4.65803645, 4.65803645,\n",
+       "        2.92345207, 2.92345207, 3.54126275, 3.54126275, 3.13194869,\n",
+       "        3.13194869, 3.21238509, 3.21238509, 3.53189446, 3.53189446],\n",
+       "       [3.21300904, 3.21300904, 3.57602977, 3.57602977, 2.32158109,\n",
+       "        2.32158109, 3.1667049 , 3.1667049 , 4.29772888, 4.29772888,\n",
+       "        2.69731775, 2.69731775, 3.26733965, 3.26733965, 2.88968677,\n",
+       "        2.88968677, 2.96390127, 2.96390127, 3.25869602, 3.25869602]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q @ B @ W.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "72709979-e5e4-457b-8a63-dc1b4be38879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.79977316, 1.39442531]),\n",
+       " array([0.54403783, 2.12358085]),\n",
+       " array([0.28030696, 1.95841922]),\n",
+       " array([ 1.92528945, -0.44365233]),\n",
+       " array([0.31269822, 3.13087063]),\n",
+       " array([0.41547366, 0.16696231]),\n",
+       " array([3.24797969, 1.58804588]),\n",
+       " array([-0.69344158,  3.00634528]),\n",
+       " array([0.65236973, 1.00714953]),\n",
+       " array([4.20425931, 1.00325642])]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "acdaa6fe-eccd-4789-8916-2d74e3147565",
    "metadata": {},
